--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,15 @@
   padding: 0;
   display: flex;flex-wrap: wrap;
 }
- 
+ .scroll::-webkit-scrollbar {
+  width: 5px;
+  height: 0px;
+}
+
+.scroll::-webkit-scrollbar-thumb {
+  background-color: #484848;
+}
+
+.scroll::-webkit-scrollbar-track {
+  background-color: #121212;
+}
